crates/oxidoc/tests/snapshots/golden_writer__native__common__header-unnumbered.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Header
    1 ( "hidden" , [ "unnumbered" ] , [] ) [ Str "Hidden" ]
]
