crates/oxidoc/tests/snapshots/golden_writer__native__common__headers.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Header 1 ( "one" , [] , [] ) [ Str "One" ]
, Header 2 ( "two" , [] , [] ) [ Str "Two" ]
, Header 6 ( "six" , [] , [] ) [ Str "Six" ]
]
