crates/oxidoc/tests/snapshots/golden_writer__native__common__horizontal-rule.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para [ Str "above" ]
, HorizontalRule
, Para [ Str "below" ]
]
