crates/oxidoc/tests/snapshots/golden_writer__native__common__image-external.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Image
        ( "" , [] , [] )
        [ Str "alt" ]
        ( "https://example.org/i.png" , "" )
    ]
]
