crates/oxidoc/tests/snapshots/golden_writer__native__common__image-inline.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "an"
    , Space
    , Image
        ( "" , [] , [] )
        [ Str "alt" , Space , Str "words" ]
        ( "pic.png" , "" )
    , Space
    , Str "inline"
    ]
]
