crates/oxidoc/tests/snapshots/golden_writer__native__common__inline-code-backtick.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "use"
    , Space
    , Code ( "" , [] , [] ) "a `b` c"
    , Space
    , Str "here"
    ]
]
