crates/oxidoc/tests/snapshots/golden_writer__native__common__inline-code-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "before"
    , Space
    , Code
        ( "" , [] , [] )
        "a & b ~ c \\ d % e # f $ g _ h { i } j ^ k | l < m > n"
    , Space
    , Str "after"
    ]
]
