crates/oxidoc/tests/snapshots/golden_writer__native__common__inline-code.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "a"
    , Space
    , Code ( "" , [] , [] ) "let x = 1;"
    , Space
    , Str "b"
    ]
]
