crates/oxidoc/tests/snapshots/golden_writer__native__common__line-block.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ LineBlock
    [ [ Str "first" , Space , Str "line" ]
    , [ Str "second" , Space , Str "line" ]
    ]
]
