crates/oxidoc/tests/snapshots/golden_writer__native__common__link-empty-label.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "before"
    , Space
    , Link ( "" , [] , [] ) [] ( "http://example.com" , "" )
    , Space
    , Str "after"
    ]
]
